Fixed issues and remade gracefull shutdown
